--- a/ExecuteServlet执行流程.adoc
+++ b/ExecuteServlet执行流程.adoc
@@ -2,16 +2,10 @@
 --
 HttpServlet->HttpServlet:id:String
 HttpServlet->DataminingFactory:getDataminingFactory(id)
-DataminingFactory->DataminingFactory: factorys.get(id)
-DataminingFactory-->HttpServlet:df:DataminingFactory
 HttpServlet->XmlDataminingFactory:df.requiredSources()
-XmlDataminingFactory->XmlDataminingFactory:init()
-XmlDataminingFactory->DataminingEngine:load(in,classloader)
-DataminingEngine->XmlDatamining:load(in);
-XmlDatamining-->DataminingEngine:xml
-DataminingEngine->DataminingEngine:load(xml,loader)
-DataminingEngine->XmlDatamining:getType
-DataminingEngine->Factory:create(xmlType, xml)
-Factory->Factory:engines.get(name)
-
+XmlDataminingFactory->XmlDataminingFactory:init(),读取资源为iputStream
+XmlDataminingFactory->DataminingEngine:load(iputStream)
+DataminingEngine->XmlDatamining:load(inputStream);
+DataminingEngine->DataminingEngine:load(xmlDatamining)
+DataminingEngine->Factory:create(xmlDatamining)
 --
