--- a/虚拟机环境.md
+++ b/虚拟机环境.md
@@ -83,6 +83,16 @@ yum -y remove mysql-libs.x86_64 #卸载已安装的mysql
 find / -name mysql #查看是否有安装过mysql(非yum方式)
 ```
 
+# 
+
+```
+use mysql
+update user set host = '%' where user = 'root';
+FLUSH PRIVILEGES;
+```
+
+
+
 # 安装jdk
 
 ```shell
