--- a/虚拟机环境.md
+++ b/虚拟机环境.md
@@ -2,8 +2,9 @@
 
 **vi \etc\sysconfig\network-scripts\ifcfg-eth0**
 
+vi \etc\sysconfig\network-scripts\ifcfg-ens33(centos7)
+
 DEVICE=eth0
-HWADDR=00:0C:29:E5:06:1C
 TYPE=Ethernet
 UUID=4ae3740f-d406-4dc5-868c-0c1fb5128c47
 **ONBOOT=yes**
@@ -13,15 +14,21 @@ NM_CONTROLLED=yes
 **NETMASK=255.255.255.0**
 **GATEWAY=192.168.140.2**
 **DNS1=114.114.114.114**
-**DNS2=8.8.8.8**
+**DNS2=8.8.8.8**s
 
 ------
 
 ```shell
+#centos6
 service network restart  #重启网络配置
-
 ifconfig #查看网络配置是否生效
+ping www.baidu.com #测试网络是否连通
+```
 
+```shell
+#centos7
+systemctl restart network #重启网络
+ip addr #查看ip地址
 ping www.baidu.com #测试网络是否连通
 ```
 
@@ -29,23 +36,30 @@ ping www.baidu.com #测试网络是否连通
 
 # 配置ssh
 
-
+ssh-keygen
 
 
 
 # 关闭防火墙
 
 ```shell
+#centos6
 service iptables status	 #查看防火墙状态
-
 service iptables stop	#临时关闭防火墙
-
 chkconfig iptables off	#永久关闭防火墙
+```
+
+```shell
+#centos7
+#临时关闭
+systemctl stop firewalld
+#禁止开机启动
+systemctl disable firewalld
 ```
 
 
 
-# 安装nppFTP插件
+# notepad++安装nppFTP插件
 
 安装nppPluginManager  7.5需要手动安装
 
@@ -73,7 +87,7 @@ yum -y update
 
 # 安装lrzsz
 
-yum install lrzsz
+yum install -y lrzsz
 
 # 安装mysql
 
@@ -220,21 +234,7 @@ lsb_release -a
 
 
 
-# centos7安装完成配置网络
 
-vi \etc\sysconfig\network-scripts\ifcfg-ens33
-
-```
-ONBOOT=yes
-```
-
-这里是ens33,不是eth0.然后就可以愉快的上网了,配置:
-
-静态ip
-
-dns
-
-主机名
 
 # 安装ifconfig命令工具
 
