--- a/work/设计院项目工作记录.md
+++ b/work/设计院项目工作记录.md
@@ -1,22 +1,24 @@
+# vpn
 
-== vpn
-:
-VPN:liushuangzhen   密码：Fyh@10024008
-:
-登录用户名： liulu ,登录密码： 3iO2ly18 ,请登
+liushuangzhen   密码：Fyh@10024008
+
+用户名： liulu ,密码： 3iO2ly18 
 
 账号/密码: wangyaozu/Wyz@2019
 
-
-Yy@wgzx90
+90的密码:  账号:yingyong    密码Yy@wgzx90
 Yy@wgzx125
 
+# 软件版本
 
 mysql:5.7.20
 postgres:9.4.15
 
-90节点密码   do@toolbox
 
+
+# ambari账号密码
+
+  账号 admin    密码 admin
 
 
 
@@ -684,8 +686,7 @@ nifi
 com.nsn.web.do.tbox.cmcc.spark.volte.test
 ----
 
-
-== 专题配置
+# 专题配置
 
 show partitions bigxdrcmcc;
 show partitions bigxdrcmccdrop;
@@ -695,76 +696,78 @@ show partitions bigxdrcmccsrvcc;
 show partitions bigxdrcmccsrvccmr;
 show partitions bigxdrvtv;
 
-== 小时任务
-=== mw  推2小时
-[source]
----
---master yarn --deploy-mode client --driver-memory 4G --driver-cores 5 --executor-memory 8G --executor-cores 5 --num-executors 50 --conf spark.sql.shuffle.partitions=50 --conf spark.yarn.executor.memoryOverhead=4G
----
+## mw  推2小时
 
-=== sv  推2小时
-[source]
----
+--master yarn --deploy-mode client --driver-memory 4G --driver-cores 5 --executor-memory 8G --executor-cores 5 --num-executors 50 --conf spark.sql.shuffle.partitions=50 --conf spark.yarn.executor.memoryOverhead=4G
+
+## sv  推2小时
+
 --master yarn --deploy-mode client --driver-memory 4G --driver-cores 5 --executor-memory 8G --executor-cores 5 --num-executors 20 --conf spark.sql.shuffle.partitions=20 --conf spark.yarn.executor.memoryOverhead=4G
----
 
-=== bigxdrcmcc  推2小时
-[source]
----
+## bigxdrcmcc  推2小时
+
 --master yarn --deploy-mode client --driver-memory 4G --driver-cores 5 --executor-memory 8G --executor-cores 5 --num-executors 50 --conf spark.sql.shuffle.partitions=50 --conf spark.yarn.executor.memoryOverhead=4G
----
 
-=== cmccdrop  推2小时10分钟
-[source]
----
+## cmccdrop  推2小时10分钟
+
 --master yarn --deploy-mode client --driver-memory 4G --driver-cores 5 --executor-memory 8G --executor-cores 5 --num-executors 20 --conf spark.sql.shuffle.partitions=50 --conf spark.yarn.executor.memoryOverhead=4G
----
 
-=== cmccsrvcc	 推2小时20分钟
-[source]
----
+## cmccsrvcc	 推2小时20分钟
+
 --master yarn --deploy-mode client --driver-memory 4G --driver-cores 5 --executor-memory 8G --executor-cores 5 --num-executors 20 --conf spark.sql.shuffle.partitions=50 --conf spark.yarn.executor.memoryOverhead=4G
----
 
-=== bigxdrcmcc_render	推2小时30分钟
-[source]
----
+## bigxdrcmcc_render	推2小时30分钟
+
 --master yarn --deploy-mode client --driver-memory 4G --driver-cores 5 --executor-memory 8G --executor-cores 5 --num-executors 20 --conf spark.sql.shuffle.partitions=50 --conf spark.yarn.executor.memoryOverhead=4G
----
 
-=== cmccdrop_render	推2小时40分钟
-[source]
----
+## cmccdrop_render	推2小时40分钟
+
 --master yarn --deploy-mode client --driver-memory 4G --driver-cores 5 --executor-memory 8G --executor-cores 5 --num-executors 20 --conf spark.sql.shuffle.partitions=50 --conf spark.yarn.executor.memoryOverhead=4G
----
 
-=== cmccsrvcc_render	 推2小时50分钟
-[source]
----
+## cmccsrvcc_render	 推2小时50分钟
+
 --master yarn --deploy-mode client --driver-memory 4G --driver-cores 5 --executor-memory 8G --executor-cores 5 --num-executors 20 --conf spark.sql.shuffle.partitions=50 --conf spark.yarn.executor.memoryOverhead=4G
----
-
-=== vtv		推3小时
 
 
-[source]
----
+
+## vtv		推3小时
+
 --master yarn --deploy-mode client --driver-memory 4G --driver-cores 5 --executor-memory 8G --executor-cores 5 --num-executors 20 --conf spark.sql.shuffle.partitions=50 --conf spark.yarn.executor.memoryOverhead=4G
----
 
 
-清理work目录
-=== 删除 work 临时文件
 
-----
-ls -alrth|awk '{if($NF ~ "mw|sv|cmcc|render|vtv"){print $9}}'|head -50|xargs rm -rf
-----
+# 清理work目录
+
+ls -alrth|awk '{if($NF ~ "mw|sv|cmcc|render|vtv|srvcc|volte"){print $9}}'|head -20|xargs rm -rf
+
+# 贵州工具箱配置
+
+工具箱  90机器
+
+/opt/do/Toolbox
+
+/opt/do/Configurator
+
+20181031  迁移到/data下
+
+Toolbox  
+
+​	监听8890   读取8899的配置
+
+Configurator
+
+​	监听8899   读取8899的配置
 
 
-== 贵州环境配置文件
 
-[source,]
-----
+20181031更新了一下hdfs的密码:
+
+hdfs/Do@Toolbox123
+
+
+
+# 贵州环境配置文件
+
 datasources=spark1,mysql2,hdfs,hive
 
 hdfs.source-type=HDFS-NORMAL
