--- a/阿里大数据平台.md
+++ b/阿里大数据平台.md
@@ -39,3 +39,60 @@
 数据应用层
 
 ​	生意参谋
+
+
+
+# 日志采集
+
+## 浏览器的页面日志采集
+
+分类
+
+​	1.页面浏览(展现日志)采集(发生页面加载)
+
+​		原理:http协议
+
+​			用户输入
+
+​			浏览器请求
+
+​			服务器响应
+
+​			展现(这一步实施采集)
+
+​		步骤:
+
+​			客户端日志采集
+
+​			客户端日志发送
+
+​			服务端日志收集
+
+​			服务端日志解析存档
+
+​	2.页面交互日志采集(页面不发生加载)
+
+​	用于用户的互动行为特征
+
+​	例如  
+
+​		鼠标和输入焦点变化  ->   代表用户关注点的变化
+
+​		页面交互的反应 ->  用户是否对元素认知困难
+
+## 日志清洗和预处理
+
+做清洗的原因
+
+​	识别流量攻击,爬虫,流量作弊
+
+​	数据缺项补正.
+
+​		取值归一
+
+​		标准化处理
+
+​		反向补正:就是新日志对旧日志做回补和修正(登录后对登录前的日志回补登录信息)
+
+​	
+
