--- a/work/开发问题汇总.md
+++ b/work/开发问题汇总.md
@@ -28,9 +28,23 @@
 
 
 
+# 指标当维度怎么处理
+
+维度表不用处理,因为根表算出来了所有指标..
+
+主要问题是根表
 
 
 
+根表的计算时原始维度+指标维度
+
+所以就需要先算出来作为维度的指标,但是这个指标也依赖自己,这就不对了,因此需要跟业务沟通,这些指标用那些维度去算,用这个维度去join原始xdr,就拿到一个另一个维度的xdr数据,然后根据这个去算根表,
+
+**重要:  指标维度必须是高维度的,不然结果就不对**
+
+**重要:只能从高维度到低纬度聚合,不能从低到高**
+
+**就像能从各个区统计一个市的人口,而不能从时统计出各个区的人口**
 
 # 依赖指标的计算:
 
