--- a/work/开发问题汇总.md
+++ b/work/开发问题汇总.md
@@ -1,6 +1,6 @@
-- 15分钟表怎么输出
+- 15分钟表怎么输出?
 
-- 消息表的数据源来自哪里?是中间表吗?如果是中间表,中间表的字段不全(没有fin之类的字如first_fail_transaction)
+- 消息?表的数据源来自哪里?是中间表吗?如果是中间表,中间表的字段不全(没有fin之类的字如first_fail_transaction)
 
 - gx没有关联ci,怎么按照省市区降维  
 
