增加关联字段如何取的说明

--- a/work/开发问题汇总.md
+++ b/work/开发问题汇总.md
@@ -1,30 +1,33 @@
+项目:**河南**
+
 - 15分钟表怎么输出?
-
 - 消息表的数据源来自哪里?是中间表吗?如果是中间表,中间表的字段不全(没有fin之类的字如first_fail_transaction)
-
 - gx没有关联ci,怎么按照省市区降维  
 
-  解决:没有ci的去掉area
-
+- 解决:没有ci的去掉area
 - 中间表是否输出(指标根表)  
 
-  输出到hive或者不输出,暂时不输出吧
-
+- 输出到hive或者不输出,暂时不输出吧
 - 数据源的计算(udf函数问题)
 
-  写udf吧
-
+- 写udf吧
 - interface_ 字段
 
-  as interface   转换问题
-
+- as interface   转换问题
 - sv  ci没有算法  
 
-  用source_eci代替
-
+- 用source_eci代替
 - 没有ci维度的模型
 
-  去掉area维度,使用local_province ,local_city
+- 去掉area维度,使用local_province ,local_city
+
+
+- 关联
+
+- 怎么关联终端？	用imei_tac
+- 怎么关联网元 ?	vender_net这个字段的说明
+
+- 怎么关联小区 ? 	一般都是ci
 
 
 
